Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-38362

Android: Service discovery hangs forever if remote device doesn't have service or address is invalid

XMLWordPrintable

      If the remote device refuses SDP inquiries or the user supplied remote address does not belong to any device in the vicinity, the service discovery code hangs forever in an active discovery mode. The QBluetoothServiceDiscoveryAgent instance enters a non-recoverable state.

        For Gerrit Dashboard: QTBUG-38362
        # Subject Branch Project Status CR V

            ablasche Alex Blasche
            ablasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes